RESOLVED FIXED173669
REGRESSION (r218606): 3D Touch action menu for links is missing items
https://bugs.webkit.org/show_bug.cgi?id=173669
Summary REGRESSION (r218606): 3D Touch action menu for links is missing items
Tim Horton
Reported 2017-06-21 14:55:36 PDT
REGRESSION (r218606): 3D Touch action menu for links is missing items
Attachments
Patch (2.43 KB, patch)
2017-06-21 14:55 PDT, Tim Horton
wenson_hsieh: review+
Tim Horton
Comment 1 2017-06-21 14:55:48 PDT
Tim Horton
Comment 2 2017-06-21 15:12:11 PDT
Note You need to log in before you can comment on or make changes to this bug.